Bug 1525230 - Reset ImageRect when resolution change. r=bryce a=RyanVM

VideoInfo.mImageRect is typically only used for VP8/VP9 content, however the Windows decoder use a common code between H264 and VP8/VP9 decoding and use this data to determine the image size. So we end up with conflicting image size and image rect (which contains cropping data).

Differential Revision: https://phabricator.services.mozilla.com/D18976

--HG--
extra : source : c831a2e318419726ab00ff7662c17e367a192da0